Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -100,15 +100,23 @@
             
             <li class="nav-item" data-level="1"><a href="#academic" class="nav-link">Academic</a>
               <ul class="nav flex-column">
+            <li class="nav-item" data-level="2"><a href="#idea-topics" class="nav-link">Idea Topics</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-level="2"><a href="#key-links" class="nav-link">Key Links</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
             <li class="nav-item" data-level="2"><a href="#interesting-projects" class="nav-link">Interesting Projects</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#links" class="nav-link">Links</a>
+            <li class="nav-item" data-level="2"><a href="#other-links" class="nav-link">Other Links</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#idea-topics" class="nav-link">Idea Topics</a>
+            <li class="nav-item" data-level="2"><a href="#idea-topics-backup" class="nav-link">Idea Topics: Backup</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -120,6 +128,53 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="academic">Academic</h1>
+<hr />
+<!---
+*****************************************
+   Focused Ideas
+*****************************************
+--->
+
+<h2 id="idea-topics"><span style="color:blue">Idea Topics</span></h2>
+<ol>
+<li>
+<p><strong>[Optimization] Approximation &amp; function optimization</strong></p>
+<ul>
+<li>Learning Nonlinear Mixtures: Identifiability and Algorithm</li>
+</ul>
+</li>
+<li>
+<p><strong>[Signal Processing] multi-source multi-target tracking</strong></p>
+<ul>
+<li>Statistical Multi-source Multi-target Information Fusion</li>
+<li>Trajectory Poisson multi-Bernoulli filters</li>
+<li>Paper: The Gaussian Mixture Prob Hypothesis Density Filter: gmphd github</li>
+</ul>
+</li>
+<li>
+<p><strong>[Statistics]</strong></p>
+<ul>
+<li>Statistical Inference for the EU portfolio in high dimensions</li>
+</ul>
+</li>
+</ol>
+<hr />
+<!---
+*****************************************
+    Key Links
+*****************************************
+--->
+
+<h2 id="key-links"><span style="color:blue">Key Links</span></h2>
+<ul>
+<li>
+<p><strong>ICML 2020</strong> </p>
+<ul>
+<li>https://icml.cc/virtual/2020/papers.html?filter=keywords</li>
+</ul>
+</li>
+</ul>
+<hr />
 <hr />
 <!---
 *****************************************
@@ -148,11 +203,11 @@
 </ul>
 <!---
 *****************************************
-    Links
+    Other Links
 *****************************************
 --->
 
-<h2 id="links">Links</h2>
+<h2 id="other-links">Other Links</h2>
 <ul>
 <li>
 <p><strong>sto-geo researcher: Blaszczyszyn</strong> </p>
@@ -176,28 +231,11 @@
 <hr />
 <!---
 *****************************************
-   Ideas
+   Ideas - Backup
 *****************************************
 --->
 
-<h2 id="idea-topics">Idea Topics</h2>
-<ol>
-<li>
-<p><strong>[Optimization] Approximation &amp; function optimization</strong></p>
-<ul>
-<li>Learning Nonlinear Mixtures: Identifiability and Algorithm</li>
-</ul>
-</li>
-<li>
-<p><strong>[Signal Processing] multi-source multi-target tracking</strong></p>
-<ul>
-<li>Statistical Multi-source Multi-target Information Fusion</li>
-<li>Trajectory Poisson multi-Bernoulli filters</li>
-<li>Paper: The Gaussian Mixture Prob Hypothesis Density Filter: gmphd github</li>
-</ul>
-</li>
-</ol>
-<p><strong>Backup</strong></p>
+<h2 id="idea-topics-backup">Idea Topics: Backup</h2>
 <ol>
 <li>
 <p>Multicast/unicast optimization in single cell</p>
