--- a/academic-maths/index.html
+++ b/academic-maths/index.html
@@ -100,6 +100,10 @@
             
             <li class="nav-item" data-level="1"><a href="#academic" class="nav-link">Academic</a>
               <ul class="nav flex-column">
+            <li class="nav-item" data-level="2"><a href="#maths-key-knowledge" class="nav-link">Maths - Key Knowledge</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
             <li class="nav-item" data-level="2"><a href="#maths-proof-examples" class="nav-link">Maths - Proof Examples</a>
               <ul class="nav flex-column">
               </ul>
@@ -116,6 +120,16 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="academic">Academic</h1>
+<hr />
+<!---
+*****************************************
+    Key Maths
+*****************************************
+--->
+
+<h2 id="maths-key-knowledge"><span style="color:blue">Maths - Key Knowledge</span></h2>
+<hr />
+<hr />
 <!---
 *****************************************
     Maths - Beautiful Proof Examples
