--- a/academic-papers/index.html
+++ b/academic-papers/index.html
@@ -100,6 +100,14 @@
             
             <li class="nav-item" data-level="1"><a href="#academic" class="nav-link">Academic</a>
               <ul class="nav flex-column">
+            <li class="nav-item" data-level="2"><a href="#important-papers" class="nav-link">Important Papers</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-level="2"><a href="#paper-reading-notes" class="nav-link">Paper Reading Notes</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
             <li class="nav-item" data-level="2"><a href="#papers-stochastic-geometric" class="nav-link">Papers - Stochastic Geometric</a>
               <ul class="nav flex-column">
               </ul>
@@ -112,10 +120,6 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#paper-reading-notes" class="nav-link">Paper Reading Notes</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
               </ul>
             </li>
         </ul>
@@ -125,154 +129,14 @@
 
 <h1 id="academic">Academic</h1>
 <hr />
-<!---
-*****************************************
-    Papers - Stochastic Geometric 
-*****************************************
---->
-
-<h2 id="papers-stochastic-geometric">Papers - Stochastic Geometric</h2>
-<ol>
-<li>
-<p><font color='red'><strong>Millimeter Wave Outdoor Cellular Networks: Stochastic Geometry Channel Modeling and Performance Analysis</strong></font></p>
-<ul>
-<li>Study Note: </li>
-</ul>
-</li>
-<li>
-<p><strong>Unified Stochastic Geometry Modeling and Analysis of Cellular Networks in LOS/NLOS and Shadowed Fading</strong></p>
-<ul>
-<li>Note: theoretical analysis framework for BER modeling</li>
-</ul>
-</li>
-<li>
-<p><strong>The Intensity Matching Approach: A Tractable Stochastic Geometry Approximation to System-Level Analysis of Cellular Networks</strong></p>
-<ul>
-<li>Note: can use the framework modeling in this paper for a cellular mmW study</li>
-</ul>
-</li>
-<li>
-<p><strong>Analytical Model for Outdoor Millimeter Wave Channels Using Geometry-Based Stochastic Approach</strong></p>
-<ul>
-<li>Note:</li>
-</ul>
-</li>
-<li>
-<p><strong>[TO Read] The impact of mobility model on handover rate in heterogeneous multi-tier wireless networks</strong></p>
-</li>
-<li>
-<p><strong>[TO Read] Recent progress in Sto-Geo in cellular</strong></p>
-<ul>
-<li>https://chiranjibsaha.github.io/files/Saha_C_D_2020.pdf</li>
-</ul>
-</li>
-</ol>
+<p>&lt;!---</p>
 <hr />
-<!---
-*****************************************
-    Papers - TO-READ
-*****************************************
---->
-
-<h2 id="papers-general">Papers - General</h2>
-<ul>
-<li>
-<p><strong>[On-Going] Modeling and Analysis of Cellular Networks Using Stochastic Geometry: A Tutorial</strong></p>
-<ul>
-<li>Reading Note: study is on-going, has not finished. It presents some basic theorems in this topic. </li>
-</ul>
-</li>
-<li>
-<p><strong>https://arxiv.org/pdf/1812.07665.pdf</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1812.07665.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Universal Best Arm Identification</strong></p>
-<ul>
-<li>Song Shen's paper</li>
-</ul>
-</li>
-<li>
-<p>Błaszczyszyn, B. and Keeler, H. P. (2015). <strong>Studying the SINR process of the typical user in Poisson networks by using its factorial moment measures.</strong> IEEE Trans. Inf. Theory 61, 6774 - 6794. </p>
-<ul>
-<li>Reading Note: distribution characterization for SNR, SINR, and STINR</li>
-</ul>
-</li>
-<li>
-<p><strong>FR2 over 52GHz</strong>    </p>
-</li>
-<li>
-<p><strong>Large Scale LoRa Network</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.07438.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Age of Information</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.07717.pdf</li>
-</ul>
-</li>
-</ul>
+<pre><code>Paper - Important
+</code></pre>
 <hr />
-<!---
-*****************************************
-    Papers - Robotic Wireless Network
-*****************************************
---->
-
-<h2 id="papers-robotic-wireless-network">Papers - Robotic Wireless Network</h2>
-<p><strong>ON-GOING</strong></p>
-<ul>
-<li>
-<p><font color='red'><strong>Joint trajectory and communication design for multi-UAV enabled wireless networks</strong></p>
-<ul>
-<li>Note: fundamental flagship paper in this area</font></li>
-</ul>
-</li>
-<li>
-<p>Link: https://web.ece.ucsb.edu/mostofi-lab/overview/CommRobotics.html</p>
-<ul>
-<li>also good nice page template?</li>
-</ul>
-</li>
-<li>
-<p>Paper: https://arxiv.org/pdf/1308.0037.pdf</p>
-</li>
-</ul>
-<p><strong>TO READ</strong>
-* [TO READ] <strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
-<ul>
-<li>
-<p>[To Read] <strong>Connecting flying backhauls of drones to enhance vehicular networks with fixed 5G NR infrastructure</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Autonomous UAV-aided Mesh Wireless Networks</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Distributed Intelligence Empowered Data Aggregation and Distribution for Multi-robot Cooperative Communication</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>QoS_Compliant_3D_Deployment_Optimization_Strategy_UAV_BS</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Intelligent UAV Based Flexible 5G Emergency Networks: Field Trial and System Level Results</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Deep_QNetwork_Dynamic_Movement_Strategy_UAV_Assisted_Network</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Distributed Deep Learning-based Task Offloading for UAV-enabled Mobile Edge Computing</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>UAV_Communications_5G_and_Beyond_Recent_Advances_Future_Trends</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Latency and Reliability Oriented Collaborative Optimization for Multi-UAV Aided Mobile Edge Computing System</strong></p>
-</li>
-</ul>
+<p>---&gt;</p>
+<h2 id="important-papers"><span style="color:blue">Important Papers</span></h2>
+<hr />
 <hr />
 <!---
 *****************************************
@@ -478,7 +342,157 @@
 <li>https://gitxuy.github.io/files/GlobeCom17_GP.pdf</li>
 </ul>
 </li>
-</ol></div>
+</ol>
+<hr />
+<!---
+*****************************************
+    Papers - Stochastic Geometric 
+*****************************************
+--->
+
+<h2 id="papers-stochastic-geometric">Papers - Stochastic Geometric</h2>
+<ol>
+<li>
+<p><font color='red'><strong>Millimeter Wave Outdoor Cellular Networks: Stochastic Geometry Channel Modeling and Performance Analysis</strong></font></p>
+<ul>
+<li>Study Note: </li>
+</ul>
+</li>
+<li>
+<p><strong>Unified Stochastic Geometry Modeling and Analysis of Cellular Networks in LOS/NLOS and Shadowed Fading</strong></p>
+<ul>
+<li>Note: theoretical analysis framework for BER modeling</li>
+</ul>
+</li>
+<li>
+<p><strong>The Intensity Matching Approach: A Tractable Stochastic Geometry Approximation to System-Level Analysis of Cellular Networks</strong></p>
+<ul>
+<li>Note: can use the framework modeling in this paper for a cellular mmW study</li>
+</ul>
+</li>
+<li>
+<p><strong>Analytical Model for Outdoor Millimeter Wave Channels Using Geometry-Based Stochastic Approach</strong></p>
+<ul>
+<li>Note:</li>
+</ul>
+</li>
+<li>
+<p><strong>[TO Read] The impact of mobility model on handover rate in heterogeneous multi-tier wireless networks</strong></p>
+</li>
+<li>
+<p><strong>[TO Read] Recent progress in Sto-Geo in cellular</strong></p>
+<ul>
+<li>https://chiranjibsaha.github.io/files/Saha_C_D_2020.pdf</li>
+</ul>
+</li>
+</ol>
+<hr />
+<!---
+*****************************************
+    Papers - TO-READ
+*****************************************
+--->
+
+<h2 id="papers-general">Papers - General</h2>
+<ul>
+<li>
+<p><strong>[On-Going] Modeling and Analysis of Cellular Networks Using Stochastic Geometry: A Tutorial</strong></p>
+<ul>
+<li>Reading Note: study is on-going, has not finished. It presents some basic theorems in this topic. </li>
+</ul>
+</li>
+<li>
+<p><strong>https://arxiv.org/pdf/1812.07665.pdf</strong></p>
+<ul>
+<li>Link: https://arxiv.org/pdf/1812.07665.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Universal Best Arm Identification</strong></p>
+<ul>
+<li>Song Shen's paper</li>
+</ul>
+</li>
+<li>
+<p>Błaszczyszyn, B. and Keeler, H. P. (2015). <strong>Studying the SINR process of the typical user in Poisson networks by using its factorial moment measures.</strong> IEEE Trans. Inf. Theory 61, 6774 - 6794. </p>
+<ul>
+<li>Reading Note: distribution characterization for SNR, SINR, and STINR</li>
+</ul>
+</li>
+<li>
+<p><strong>FR2 over 52GHz</strong>    </p>
+</li>
+<li>
+<p><strong>Large Scale LoRa Network</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2008.07438.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Age of Information</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2008.07717.pdf</li>
+</ul>
+</li>
+</ul>
+<hr />
+<!---
+*****************************************
+    Papers - Robotic Wireless Network
+*****************************************
+--->
+
+<h2 id="papers-robotic-wireless-network">Papers - Robotic Wireless Network</h2>
+<p><strong>ON-GOING</strong></p>
+<ul>
+<li>
+<p><font color='red'><strong>Joint trajectory and communication design for multi-UAV enabled wireless networks</strong></p>
+<ul>
+<li>Note: fundamental flagship paper in this area</font></li>
+</ul>
+</li>
+<li>
+<p>Link: https://web.ece.ucsb.edu/mostofi-lab/overview/CommRobotics.html</p>
+<ul>
+<li>also good nice page template?</li>
+</ul>
+</li>
+<li>
+<p>Paper: https://arxiv.org/pdf/1308.0037.pdf</p>
+</li>
+</ul>
+<p><strong>TO READ</strong>
+* [TO READ] <strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
+<ul>
+<li>
+<p>[To Read] <strong>Connecting flying backhauls of drones to enhance vehicular networks with fixed 5G NR infrastructure</strong></p>
+</li>
+<li>
+<p>[To Read] <strong>Autonomous UAV-aided Mesh Wireless Networks</strong></p>
+</li>
+<li>
+<p>[To Read] <strong>Distributed Intelligence Empowered Data Aggregation and Distribution for Multi-robot Cooperative Communication</strong></p>
+</li>
+<li>
+<p>[To Read] <strong>QoS_Compliant_3D_Deployment_Optimization_Strategy_UAV_BS</strong></p>
+</li>
+<li>
+<p>[To Read] <strong>Intelligent UAV Based Flexible 5G Emergency Networks: Field Trial and System Level Results</strong></p>
+</li>
+<li>
+<p>[To Read]<strong>Deep_QNetwork_Dynamic_Movement_Strategy_UAV_Assisted_Network</strong></p>
+</li>
+<li>
+<p>[To Read]<strong>Distributed Deep Learning-based Task Offloading for UAV-enabled Mobile Edge Computing</strong></p>
+</li>
+<li>
+<p>[To Read]<strong>UAV_Communications_5G_and_Beyond_Recent_Advances_Future_Trends</strong></p>
+</li>
+<li>
+<p>[To Read]<strong>Latency and Reliability Oriented Collaborative Optimization for Multi-UAV Aided Mobile Edge Computing System</strong></p>
+</li>
+</ul>
+<hr /></div>
             </div>
         </div>
 
