Deployed  with MkDocs version: 1.1.2

--- a/academic-papers/index.html
+++ b/academic-papers/index.html
@@ -129,12 +129,12 @@
 
 <h1 id="academic">Academic</h1>
 <hr />
-<p>&lt;!---</p>
-<hr />
-<pre><code>Paper - Important
-</code></pre>
-<hr />
-<p>---&gt;</p>
+<!---
+*****************************************
+    Paper - Important
+*****************************************
+--->
+
 <h2 id="important-papers"><span style="color:blue">Important Papers</span></h2>
 <hr />
 <hr />
