Deployed  with MkDocs version: 1.1.2

--- a/academic-maths/index.html
+++ b/academic-maths/index.html
@@ -130,7 +130,12 @@
 <h2 id="maths-key-knowledge"><span style="color:blue">Maths - Key Knowledge</span></h2>
 <hr />
 <hr />
+<ul>
+<li><strong>Introduction to online convex optimization</strong> </li>
+<li>https://sites.google.com/view/intro-oco/ver-2-0?authuser=0</li>
+</ul>
 <!---
+
 *****************************************
     Maths - Beautiful Proof Examples
 *****************************************
