--- a/academic-papers/index.html
+++ b/academic-papers/index.html
@@ -129,23 +129,22 @@
 
 <h1 id="academic">Academic</h1>
 <hr />
-<!---
-*****************************************
-    Paper - Important
-*****************************************
---->
+<!--- Paper - Important --->
 
 <h2 id="important-papers"><span style="color:blue">Important Papers</span></h2>
 <hr />
 <hr />
-<!---
-*****************************************
-    Paper - Reading Notes
-*****************************************
---->
+<!--- Paper - Reading Notes --->
 
 <h2 id="paper-reading-notes">Paper Reading Notes</h2>
 <ol>
+<li>
+<p><strong>Dual Mirror Descent for Online Allocation Problems</strong></p>
+<ul>
+<li>not finished yet</li>
+<li>https://proceedings.icml.cc/static/paper_files/icml/2020/2866-Paper.pdf</li>
+</ul>
+</li>
 <li>
 <p><strong>Optimal Policies for Observing Time Series and Related Restless Bandit Problems</strong></p>
 </li>
