--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#current-readings" class="nav-link">Current Readings</a>
+            <li class="nav-item" data-level="2"><a href="#current-reading-plan" class="nav-link">Current Reading Plan</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -148,47 +148,45 @@
 <hr />
 <h2 id="patents">Patents</h2>
 <ol>
-<li>
-<p><strong>[Granted]</strong> US9338668B2: Gain control for intra-band carrier aggregation</p>
-</li>
-<li>
-<p>[Granted] Soft-windowing channel estimation</p>
-</li>
-<li>[Granted] Intelligent resource assignment to increase throughput in multiple input multiple output (MIMO) and carrier aggregation (CA) capable devices</li>
-<li>[Granted] Correlation-enhanced frequency scanning</li>
-<li>Dynamically updating filtering configuration in modem baseband processing</li>
-<li>Optimization for energy efficient multi-channel communication with shared lna structure</li>
-<li>
-<p>Network Assisted Wireless Device Preferred Bandwidth Part Configuration</p>
-</li>
-<li>
-<p>Transport block size for channels with shortened transmission time interval</p>
-</li>
-<li>Dynamic ip2 calibration</li>
-<li>Apparatus and method for measurement report optimization</li>
+<li><strong>[Granted]</strong> US9338668B2: Gain control for intra-band carrier aggregation</li>
+<li><strong>[Granted]</strong> US10454716B2: Soft-windowing channel estimation</li>
+<li><strong>[Granted]</strong> US10356755B2: Intelligent resource assignment to increase throughput in multiple input multiple output (MIMO) and carrier aggregation (CA) capable devices</li>
+<li><strong>[Granted]</strong> US10624024B2: Correlation-enhanced frequency scanning</li>
+<li>US20150049651A1: Dynamically updating filtering configuration in modem baseband processing</li>
+<li>US20180091108A1: Optimization for energy efficient multi-channel communication with shared lna structure</li>
+<li>US20190253229A1: Transport block size for channels with shortened transmission time interval</li>
+<li>WO2019075606A1: Dynamic ip2 calibration</li>
+<li>WO2019241942A1: Apparatus and method for measurement report optimization</li>
 <li>Techniques and apparatuses for interference mitigation using a reconfigurable receiver</li>
+<li>US20200295854A1: Dynamic antenna selection and beam steering</li>
+<li>US20200228189A1: 5G New Radio Beam Refinement Procedure</li>
+<li>US20200145080A1: Beam Management without Beam Correspondence</li>
+<li>US20200186290A1: Groupcast Transmission with Feedback for Intra-Platooning and Inter-Platooning Communications</li>
+<li>US20200196240A1: Power Saving for Pedestrian User Equipment in Vehicular Communications Systems</li>
+<li>US20190281504A1: Network Assisted Wireless Device Preferred Bandwidth Part Configuration</li>
+<li>US20200137602A1: Cell Measurements Using Configured Reference Signals while in RRC Inactive Mode</li>
+<li>US20200245408A1: V2X Resource Map for Semi-Persistent Scheduling with Unicast/Groupcast Services</li>
+<li>US20200196353A1: V2X Side-link Resource Management</li>
+<li>US20200107400A1: Downlink Control for Non Coherent Joint Transmission</li>
+<li>US20200107399A1: Listen Again After Talk for Broadcast/Multi-cast Communications</li>
+<li>US20200107279A1: LTE NR Power Control for EN-DC</li>
+<li>WO2020029230A1: Dynamic c-drx configuration for balance between power savings and communication efficiency, and use of dci for activating carrier components</li>
+<li>US20200145918A1: Apparatus, System, and Method for Mobile Station Power Saving</li>
+<li>US20200107323A1: Wideband Transmission with Narrowband Monitoring for New Radio Unlicensed Spectrum (NRU)</li>
+<li>20200358515: Beam Tracking Using Downlink Data Reception and Motion Sensing Information</li>
 </ol>
 <hr />
 <h2 id="links">Links</h2>
 <hr />
-<!-------------------------------
-    Reading Progress
----------------------------------->
+<!-- Reading Progress -->
 
-<h2 id="current-readings">Current Readings</h2>
+<h2 id="current-reading-plan">Current Reading Plan</h2>
 <ul>
 <li>
 <p><strong>LTE/NR Spec</strong></p>
-<ul>
-<li>TBD</li>
-</ul>
 </li>
 <li>
 <p><strong>3GPP Doc</strong></p>
-<ul>
-<li>RAN2</li>
-<li>Multicast?</li>
-</ul>
 </li>
 <li>
 <p><strong>Optimization Method in Chinese</strong></p>
@@ -280,5 +278,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-11-19 01:56:06.007945+00:00
+Build Date UTC : 2020-11-19 21:17:13.979125+00:00
 -->
