Deployed  with MkDocs version: 1.1.2

--- a/index.html
+++ b/index.html
@@ -133,20 +133,20 @@
 <p>The rings of Saturn are the most extensive ring system of any planet in the Solar System. They consist of countless small particles, ranging in size from micrometers to meters, that orbit about Saturn. </p>
 </blockquote>
 <hr />
-<h2 id="work">Work</h2>
+<h2 id="work"><strong>Work</strong></h2>
 <ul>
 <li>Wireless System Design (4G/5G/Wifi)</li>
 <li>Wireless FW and SW development</li>
 </ul>
 <hr />
-<h2 id="interests">Interests</h2>
+<h2 id="interests"><strong>Interests</strong></h2>
 <ul>
 <li>wireless communication &amp; network</li>
 <li>optimization, statistics</li>
 <li>software-defined-radio</li>
 </ul>
 <hr />
-<h2 id="patents">Patents</h2>
+<h2 id="patents"><strong>Patents</strong></h2>
 <ol>
 <li><strong>[Granted]</strong> US9338668B2: Gain control for intra-band carrier aggregation</li>
 <li><strong>[Granted]</strong> US10454716B2: Soft-windowing channel estimation</li>
@@ -176,23 +176,18 @@
 <li>20200358515: Beam Tracking Using Downlink Data Reception and Motion Sensing Information</li>
 </ol>
 <hr />
-<h2 id="links">Links</h2>
+<h2 id="links"><strong>Links</strong></h2>
 <hr />
-<!-- Reading Progress -->
-
-<h2 id="current-reading-plan">Current Reading Plan</h2>
+<h2 id="current-reading-plan"><strong>Current Reading Plan</strong></h2>
 <ul>
 <li>
 <p><strong>LTE/NR Spec</strong></p>
 </li>
 <li>
-<p><strong>3GPP Doc</strong></p>
+<p><strong>OCO</strong></p>
 </li>
 <li>
-<p><strong>Optimization Method in Chinese</strong></p>
-</li>
-<li>
-<p><strong>MIT optimization book</strong></p>
+<p><strong>Personal MBA</strong></p>
 </li>
 </ul></div>
             </div>
@@ -278,5 +273,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-11-19 21:33:37.809905+00:00
+Build Date UTC : 2020-11-20 05:35:30.398942+00:00
 -->
