Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -168,9 +168,21 @@
 <h2 id="key-links"><span style="color:blue">Key Links</span></h2>
 <ul>
 <li>
-<p><strong>ICML 2020</strong> </p>
+<p><strong>TSP</strong></p>
 <ul>
-<li>https://icml.cc/virtual/2020/papers.html?filter=keywords</li>
+<li>https://ieeexplore.ieee.org/xpl/tocresult.jsp?isnumber=4359509</li>
+</ul>
+</li>
+<li>
+<p><strong>ICML</strong> </p>
+<ul>
+<li>[2020] https://proceedings.icml.cc/paper/2020</li>
+</ul>
+</li>
+<li>
+<p><strong>AAAI</strong></p>
+<ul>
+<li>[2020] https://aaai.org/Library/AAAI/aaai20contents-issue02.php#9</li>
 </ul>
 </li>
 </ul>
