Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -168,15 +168,12 @@
 <h2 id="key-links"><span style="color:blue">Key Links</span></h2>
 <ul>
 <li>
-<p><strong>TSP</strong></p>
-<ul>
-<li>https://ieeexplore.ieee.org/xpl/tocresult.jsp?isnumber=4359509</li>
-</ul>
+<p><a href="https://ieeexplore.ieee.org/xpl/tocresult.jsp?isnumber=4359509"><strong>TSP</strong></a></p>
 </li>
 <li>
 <p><strong>ICML</strong> </p>
 <ul>
-<li>[2020] https://proceedings.icml.cc/paper/2020</li>
+<li><a href="https://proceedings.icml.cc/paper/2020">2020</a></li>
 </ul>
 </li>
 <li>
