Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -177,10 +177,16 @@
 </ul>
 </li>
 <li>
-<p><strong>AAAI</strong></p>
-<ul>
-<li>[2020] https://aaai.org/Library/AAAI/aaai20contents-issue02.php#9</li>
-</ul>
+<p><a href="https://epubs.siam.org/journal/sjope8"><strong>SIAM J. Optimization (P1)</strong></a></p>
+</li>
+<li>
+<p><a href="https://epubs.siam.org/journal/tprbau"><strong>SIAM Probability (P1)</strong></a></p>
+</li>
+<li>
+<p><a href=""><strong>SIAM J. Matrix (P2)</strong></a></p>
+</li>
+<li>
+<p><a href="https://epubs.siam.org/journal/sjcodc"><strong>SIAM J. Control &amp; Optimization (P2)</strong></a></p>
 </li>
 </ul>
 <hr />
