Deployed  with MkDocs version: 1.1.2

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -183,7 +183,7 @@
 <p><a href="https://epubs.siam.org/journal/tprbau"><strong>SIAM Probability (P1)</strong></a></p>
 </li>
 <li>
-<p><a href=""><strong>SIAM J. Matrix (P2)</strong></a></p>
+<p><a href="https://epubs.siam.org/journal/sjmael"><strong>SIAM J. Matrix (P2)</strong></a></p>
 </li>
 <li>
 <p><a href="https://epubs.siam.org/journal/sjcodc"><strong>SIAM J. Control &amp; Optimization (P2)</strong></a></p>
