Deployed  with MkDocs version: 1.1.2

--- a/index.html
+++ b/index.html
@@ -116,10 +116,6 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#current-reading-plan" class="nav-link">Current Reading Plan</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
               </ul>
             </li>
         </ul>
@@ -177,19 +173,10 @@
 </ol>
 <hr />
 <h2 id="links"><strong>Links</strong></h2>
-<hr />
-<h2 id="current-reading-plan"><strong>Current Reading Plan</strong></h2>
 <ul>
-<li>
-<p><strong>LTE/NR Spec</strong></p>
-</li>
-<li>
-<p><strong>OCO</strong></p>
-</li>
-<li>
-<p><strong>Personal MBA</strong></p>
-</li>
-</ul></div>
+<li><a href="http://www.mafengwo.cn/">Travel Web</a></li>
+</ul>
+<hr /></div>
             </div>
         </div>
 
@@ -273,5 +260,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-12-03 19:26:42.922773+00:00
+Build Date UTC : 2020-12-03 19:41:31.259422+00:00
 -->
