Deployed  with MkDocs version: 1.1.2

--- a/index.html
+++ b/index.html
@@ -131,15 +131,14 @@
 <hr />
 <h2 id="work"><strong>Work</strong></h2>
 <ul>
-<li>Wireless System Design (4G/5G/Wifi)</li>
-<li>Wireless FW and SW development</li>
+<li>Wireless System Design (4G/5G/WLAN)</li>
+<li>Wireless FW/SW</li>
 </ul>
 <hr />
 <h2 id="interests"><strong>Interests</strong></h2>
 <ul>
-<li>wireless communication &amp; network</li>
-<li>optimization, statistics</li>
-<li>software-defined-radio</li>
+<li>Optimization</li>
+<li>Statistics</li>
 </ul>
 <hr />
 <h2 id="patents"><strong>Patents</strong></h2>
@@ -260,5 +259,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-12-03 22:41:04.344432+00:00
+Build Date UTC : 2020-12-03 22:43:59.977634+00:00
 -->
