Deployed  with MkDocs version: 1.1.2

--- a/wireless/index.html
+++ b/wireless/index.html
@@ -121,13 +121,13 @@
 
 <h1 id="wireless-study-notes">Wireless Study Notes</h1>
 <hr />
-<h2 id="books">Books</h2>
+<h2 id="books"><strong>Books</strong></h2>
 <ul>
 <li><strong>5G NR The Next Generation Wireless Access Technology</strong></li>
 <li><strong>5G NR Bullets</strong><hr />
 </li>
 </ul>
-<h2 id="spec-list">Spec List</h2>
+<h2 id="spec-list"><strong>Spec List</strong></h2>
 <p><strong>Overall Material</strong></p>
 <ul>
 <li>
@@ -273,27 +273,7 @@
 </li>
 </ul>
 <hr />
-<h2 id="links">Links</h2>
-<ul>
-<li>
-<p>FR2 mmW Test Slides from TE</p>
-<ul>
-<li>https://cdn.rohde-schwarz.com/fr/general_37/local_webpages/2019_demystifying_5g_and_ota/5G_NR_France_June2019_-_OTA_regulation_test_and_measurement_aspects.pdf</li>
-</ul>
-</li>
-<li>
-<p>ITU antenna test positioning</p>
-<ul>
-<li>https://www.itu.int/dms_pub/itu-t/opb/tut/T-TUT-TEST-2019-PDF-E.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Illustration for inband/out-of-band blocking, and ACS</strong></p>
-<ul>
-<li>https://cdn.rohde-schwarz.com/pws/dl_downloads/dl_application/application_notes/1ma221/1MA221_0e.pdf</li>
-</ul>
-</li>
-</ul></div>
+<h2 id="links"><strong>Links</strong></h2></div>
             </div>
         </div>
 
