Deployed  with MkDocs version: 1.1.2

--- a/SDR/index.html
+++ b/SDR/index.html
@@ -127,29 +127,23 @@
 <hr />
 <h2 id="objective">Objective</h2>
 <ul>
-<li>emulation system (1-2 users)</li>
-<li>real-time protocol/MAC/PHY system</li>
+<li>emulation system (w/ a few users)</li>
+<li>real-time protocol (MAC/PHY)</li>
 <li>link-level PHY sim</li>
 </ul>
 <hr />
 <h2 id="codeprojects">Code/Projects</h2>
 <ul>
-<li>None</li>
+<li>TBD</li>
 </ul>
 <hr />
 <h2 id="papers">Papers</h2>
 <ul>
 <li>
-<p><strong>Modeling and Analysis of Cellular Networks Using Stochastic Geometry: A Tutorial</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1806.10523.pdf</li>
-</ul>
+<p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=1618816&amp;casa_token=Ub4WpoUlBnIAAAAA:eE9OAtV5f6U22OgXhepKaOUHUiQDFzyVB4aHiwuVIleF7Wwej6ihOPtWHIqrYnmn79ImboNBaQ">Chirp Paper 1</a></p>
 </li>
 <li>
-<p>[TO READ] https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=1618816&amp;casa_token=Ub4WpoUlBnIAAAAA:eE9OAtV5f6U22OgXhepKaOUHUiQDFzyVB4aHiwuVIleF7Wwej6ihOPtWHIqrYnmn79ImboNBaQ</p>
-</li>
-<li>
-<p>[TO READ] https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7523229&amp;casa_token=psuYQSPOtYUAAAAA:JUOHfrUL_b_-LR_SKuLjmu6AUiBdEHUTyCxjEae7Foq_Rd9Su00xgqVqUirA7-UYIlLzgdM9XA</p>
+<p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7523229&amp;casa_token=psuYQSPOtYUAAAAA:JUOHfrUL_b_-LR_SKuLjmu6AUiBdEHUTyCxjEae7Foq_Rd9Su00xgqVqUirA7-UYIlLzgdM9XA">Chirp Paper 2</a></p>
 </li>
 </ul>
 <hr />
