--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -135,7 +135,7 @@
 *****************************************
 --->
 
-<h2 id="idea-topics"><span style="color:blue">Idea Topics</span></h2>
+<h2 id="idea-topics"><span style="color:blue"><strong>Idea Topics</strong></span></h2>
 <ol>
 <li>
 <p><strong>[Optimization] Approximation &amp; function optimization</strong></p>
@@ -165,7 +165,7 @@
 *****************************************
 --->
 
-<h2 id="key-links"><span style="color:blue">Key Links</span></h2>
+<h2 id="key-links"><span style="color:blue"><strong>Key Links</strong></span></h2>
 <ul>
 <li>
 <p><a href="https://ieeexplore.ieee.org/xpl/tocresult.jsp?isnumber=4359509"><strong>TSP</strong></a></p>
