--- a/academic-maths/index.html
+++ b/academic-maths/index.html
@@ -104,11 +104,11 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#maths-proof-examples" class="nav-link">Maths - Proof Examples</a>
+            <li class="nav-item" data-level="2"><a href="#proof-examples" class="nav-link">Proof Examples</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#maths-non-convex-optimization" class="nav-link">Maths - Non-Convex Optimization</a>
+            <li class="nav-item" data-level="2"><a href="#non-convex-optimization" class="nav-link">Non-Convex Optimization</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -127,21 +127,16 @@
 *****************************************
 --->
 
-<h2 id="maths-key-knowledge"><span style="color:blue">Maths - Key Knowledge</span></h2>
+<h2 id="maths-key-knowledge"><span style="color:blue"><strong>Maths - Key Knowledge</strong></span></h2>
 <ul>
 <li><strong>Introduction to online convex optimization</strong></li>
 <li>https://sites.google.com/view/intro-oco/ver-2-0?authuser=0</li>
 </ul>
 <hr />
 <hr />
-<!---
+<!--- Proof Examples --->
 
-*****************************************
-    Maths - Beautiful Proof Examples
-*****************************************
---->
-
-<h2 id="maths-proof-examples">Maths - Proof Examples</h2>
+<h2 id="proof-examples">Proof Examples</h2>
 <ol>
 <li>
 <p><strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
@@ -295,13 +290,9 @@
 </li>
 </ol>
 <hr />
-<!---
-*****************************************
-    Maths
-*****************************************
---->
+<!--- Non-Convex --->
 
-<h2 id="maths-non-convex-optimization">Maths - Non-Convex Optimization</h2>
+<h2 id="non-convex-optimization">Non-Convex Optimization</h2>
 <ul>
 <li>
 <p><strong>A unified algorithmic framework for block-structured optimization involving big data: With applications in machine learning and signal processing</strong></p>
