--- a/academic-papers/index.html
+++ b/academic-papers/index.html
@@ -108,15 +108,15 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#papers-stochastic-geometric" class="nav-link">Papers - Stochastic Geometric</a>
+            <li class="nav-item" data-level="2"><a href="#stochastic-geometric" class="nav-link">Stochastic Geometric</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#papers-general" class="nav-link">Papers - General</a>
+            <li class="nav-item" data-level="2"><a href="#general" class="nav-link">General</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#papers-robotic-wireless-network" class="nav-link">Papers - Robotic Wireless Network</a>
+            <li class="nav-item" data-level="2"><a href="#robotic-wireless-network" class="nav-link">Robotic Wireless Network</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -131,12 +131,12 @@
 <hr />
 <!--- Paper - Important --->
 
-<h2 id="important-papers"><span style="color:blue">Important Papers</span></h2>
+<h2 id="important-papers"><span style="color:blue"><strong>Important Papers</strong></span></h2>
 <hr />
 <hr />
 <!--- Paper - Reading Notes --->
 
-<h2 id="paper-reading-notes">Paper Reading Notes</h2>
+<h2 id="paper-reading-notes"><strong>Paper Reading Notes</strong></h2>
 <ol>
 <li>
 <p><strong>Dual Mirror Descent for Online Allocation Problems</strong></p>
@@ -349,7 +349,7 @@
 *****************************************
 --->
 
-<h2 id="papers-stochastic-geometric">Papers - Stochastic Geometric</h2>
+<h2 id="stochastic-geometric"><strong>Stochastic Geometric</strong></h2>
 <ol>
 <li>
 <p><font color='red'><strong>Millimeter Wave Outdoor Cellular Networks: Stochastic Geometry Channel Modeling and Performance Analysis</strong></font></p>
@@ -392,7 +392,7 @@
 *****************************************
 --->
 
-<h2 id="papers-general">Papers - General</h2>
+<h2 id="general"><strong>General</strong></h2>
 <ul>
 <li>
 <p><strong>[On-Going] Modeling and Analysis of Cellular Networks Using Stochastic Geometry: A Tutorial</strong></p>
@@ -441,7 +441,7 @@
 *****************************************
 --->
 
-<h2 id="papers-robotic-wireless-network">Papers - Robotic Wireless Network</h2>
+<h2 id="robotic-wireless-network"><strong>Robotic Wireless Network</strong></h2>
 <p><strong>ON-GOING</strong></p>
 <ul>
 <li>
