--- a/index.html
+++ b/index.html
@@ -176,11 +176,13 @@
 <ul>
 <li><a href="http://www.mafengwo.cn/">Travel Web</a></li>
 </ul>
-<script src="https://cdn1.lncld.net/static/js/av-mini-0.6.10.js"></script>
+<!-- 不蒜子计数 -->
 
-<script src="http://jerry-cdn.b0.upaiyun.com/hit-kounter/hit-kounter-lc-0.2.0.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
-<p><span data-hk-page="current"> - </span></p>
+<p><span id="busuanzi_container_site_pv" >| 总访问量 <span id="busuanzi_value_site_pv"></span> 次 </span>
+<span id="busuanzi_container_site_uv" >| 总访客数 <span id="busuanzi_value_site_uv"></span> 人 </span>
+<!-- 不蒜子计数 --></p>
 <hr /></div>
             </div>
         </div>
@@ -265,5 +267,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-12-05 00:38:44.170446+00:00
+Build Date UTC : 2020-12-05 01:20:37.895332+00:00
 -->
