Deployed  with MkDocs version: 1.1.2

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <h1 id="saturn-and-rings">Saturn and Rings</h1>
 <p><strong>Quote from Wiki:</strong></p>
 <blockquote>
-<p>The rings of Saturn are the most extensive ring system of any planet in the Solar System. They consist of countless small particles, ranging in size from micrometers to meters, that orbit about Saturn. </p>
+<p><em>The rings of Saturn are the most extensive ring system of any planet in the Solar System. They consist of countless small particles, ranging in size from micrometers to meters, that orbit about Saturn.</em></p>
 </blockquote>
 <hr />
 <h2 id="work"><strong>Work</strong></h2>
@@ -180,8 +180,8 @@
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
-<p><span id="busuanzi_container_site_pv" >| 总访问量 <span id="busuanzi_value_site_pv"></span> 次 </span>
-<span id="busuanzi_container_site_uv" >| 总访客数 <span id="busuanzi_value_site_uv"></span> 人 </span>
+<p><span id="busuanzi_container_site_pv" >| Total <span id="busuanzi_value_site_pv"></span> Visits </span>
+<span id="busuanzi_container_site_uv" >| Total <span id="busuanzi_value_site_uv"></span> Guests </span>
 <!-- 不蒜子计数 --></p>
 <hr /></div>
             </div>
@@ -267,5 +267,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-12-05 01:20:37.895332+00:00
+Build Date UTC : 2020-12-05 01:23:50.858707+00:00
 -->
